--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -65,7 +65,7 @@ background-color: skyblue;
 
 .product-list{
   text-align: centre;
-  margin-top:50px;
+  margin-top:-50px;
   
 }
 
@@ -87,4 +87,40 @@ width: 150px;
 background-color: skyblue;
 border: 1px solid white;
 cursor: pointer;
+}
+
+.product-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 50vh;
+  text-align: center;
+}
+
+.search-box {
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+}
+
+.search-box input {
+  padding: 8px;
+  font-size: 16px;
+  margin-right: 10px;
+}
+
+.search-box button {
+  padding: 8px 16px;
+  font-size: 16px;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+ul li {
+  display: inline-block;
+  margin: 0 10px;
 }
